# odissei-harvester

./: Dockerfile  README.md  docker-compose.yaml  dot_env_example  pyproject.toml
.github/workflows/: image.yml  test.yml
src/: LISS_harvester.py  OAI_harvester.py  S3Client.py  api.py  app.py  auth.py  crud.py  database.py  harvest_client.py  harvest_repository.py  harvester.py  main.py  models.py  server.py
src/schema/: harvest.py  input.py
src/tests/: test_harvester.py
