[tool.poetry]
name = "oai_harvester"
version = "1.2.0"
description = "An oai-pmh harvester that harvests metadata from data providers."
authors = ["Fjodor van Rijsselberg"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
uvicorn = "^0.23.2"
pydantic = "^1.10.12"
fastapi = "^0.101.1"
pytest = "^7.1.3"
requests = "^2.28.1"
dynaconf = "^3.2.0"
boto3 = "1.35.99"
tomli = "^2.0.1"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
moto = "^4.2.3"
httpx = "^0.25.0"
ckanapi = "^4.8"

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
black = "^23.7.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
