[tool.poetry]
name = "oai_harvester"
version = "1.3.1"
description = "An oai-pmh harvester that harvests metadata from data providers."
authors = ["Fjodor van Rijsselberg"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
requests = "^2.28.1"
dynaconf = "^3.2.0"
boto3 = "1.35.99"
tomli = "^2.0.1"
psycopg2-binary = "^2.9.7"
moto = "^4.2.3"
httpx = "^0.25.0"
ckanapi = "^4.8"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
sqlalchemy = "^2.0.44"
uvicorn = "^0.37.0"
fastapi = "^0.119.0"
pydantic = "^2.12.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
